update og metas

--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Treasured Wedding | Noces Précieuses</title>
-    <meta property="og:title" content="__OG_TITLE__" />
-    <meta property="og:description" content="__OG_DESCRIPTION__" />
+    <meta property="og:title" content="Treasured Wedding" />
+    <meta property="og:description" content="Les photos du beau mariage de Justine & Francis | 05/10/2024" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
